--- a/src/components/input/main.css
+++ b/src/components/input/main.css
@@ -6,8 +6,17 @@
 
 .img {
     width: 50%;
+    flex-wrap: wrap;
 }
 
 .img:hover {
-    box-shadow: 5px 5px 30px 10px #000000;
+    box-shadow: -3px 3px 67px 26px rgba(0, 0, 0, 0.75);
+}
+
+@media screen and (max-width:720px) {
+    .img {
+        width: 100%;
+    }
+
+
 }
